tests/should_pass/import_variant_namespacing_dep.fit
enum Status { Done, Pending }
fn get_status() -> Status
