tests/should_fail/variant_qualified_unknown_member.fit
enum IoError { NotFound, PermissionDenied }

fn get_error() -> IoError

fn check(e: IoError) -> () {
    match e {
        IoError.Garbage => { () }
        NotFound => { () }
        PermissionDenied => { () }
    }
}
